--- a/app/globals.css
+++ b/app/globals.css
@@ -10,6 +10,9 @@
   /* 🖋️ Custom Fonts */
   --font-outfit: "Outfit", sans-serif;
   --font-ovo: "Ovo", serif;
+
+  --shadow-black: 4px 4px 0 #000;
+  --shadow-white: 4px 4px 0 #fff;
 }
 
 /* 🌙 Dark Mode Support */
